k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kkium-app
  namespace: kkium
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kkium-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: kkium-app
    spec:
      containers:
      - name: kkium-app
        image: asia-northeast3-docker.pkg.dev/kkium-prod/kkium-repo/kkium-app:3a01dd17d2ec86b7a5fef0cade4c31eeb46eab2a
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 180
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
