k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kkium-service
  namespace: kkium
spec:
  selector:
    app: kkium-app
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
