k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kkium-ingress
  namespace: kkium
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "kkium-static-ip"
    networking.gke.io/managed-certificates: "kkium-managed-cert"
spec:
  rules:
  - host: api.kkium.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kkium-service
            port:
              number: 80
